--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -47,7 +47,9 @@
             <label th:text="#{users.registration.password}" for="password">Password</label>
             <input class="form-control" id="password" name="password" th:field="*{password}" th:errorclass="fieldError" type="password"
                    required="required"/><br/>
-            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password must not be empty</p>
+            <div class="alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                <p>Password must not be blank.</p>
+            </div>
         </div>
         <div class="form-group">
             <label th:text="#{users.registration.salary}" for="salary">Salary</label>
