--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form-group">
-            <label for="userName" th:text="#{users.registration.username}">User Name</label>
+            <label for="userName" th:text="#{users.registration.username}">Username</label>
             <input class="form-control" id="userName" name="userName" th:field="*{userName}" th:errorclass="fieldError" type="text" required="required"/><br/>
             <div class="alert-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
                 <p>The user name must not be empty.</p>
