--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -21,6 +21,7 @@
             <label for="nameInput">Raumname</label>
             <input th:field="*{name}" type="text" class="form-control" id="nameInput" placeholder="Raumname eingeben">
             <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+            <div th:if="${existCheck}" th:text="Raum existiert bereits!">test</div>
         </div>
         <button class="btn btn-warning" type="submit">Hinzufügen</button>
     </form>
