--- a/src/main/resources/templates/edituser.html
+++ b/src/main/resources/templates/edituser.html
@@ -65,10 +65,10 @@
                 <td th:text="${#strings.listJoin(#messages.setMsg(#strings.setPrepend(staff.getSkills(), 'users.service.')), ', ')}">
                 <td>
                     <div class="form-group">
-                        <select class="form-control" id="service" th:field="*{newSkill}">
-                            <option th:value="null" text="Please Select"></option>
-                            <option th:each="service : ${services}" th:value="${service.name()}"
-                                    th:text="#{'users.service.' + ${service.name()}}"></option>
+                        <select class="form-control" id="updateSkills" th:name="updateSkills" multiple>
+                            <option th:each="service : ${services}" th:value="${service.name()}" th:selected="${staff.getSkills().contains(service)}"
+                                    th:text="#{'users.service.' + ${service.name()}}">
+                            </option>
                         </select>
                     </div>
                 </td>
