--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -40,7 +40,7 @@
     </ul>
 
     <br>
-    <h2>Belegplan</h2>
+    <h2>Belegplan (heute)</h2>
 
     <div>
         <table class="table-striped table" th:action="@{/rooms}">
