fix  alert in template

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -20,7 +20,7 @@
         <div class="form-group">
             <label for="nameInput">Raumname</label>
             <input th:field="*{name}" type="text" class="form-control" id="nameInput" placeholder="Raumname eingeben">
-            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert-warning"></div>
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert"></div>
         </div>
         <button class="btn btn-warning" type="submit">Hinzufügen</button>
     </form>
