--- a/src/main/resources/templates/edituser.html
+++ b/src/main/resources/templates/edituser.html
@@ -14,7 +14,7 @@
 
 <div class="container mt-md-5">
     <h1 th:text="#{users.edit.title}">Nutzerbearbeitung</h1>
-    <form method="post" role="form" id="form" th:object="${editform}" th:action="@{/users/{id}(id=${staff.getId()})}">
+    <form method="post" id="editform" th:object="${editform}" th:action="@{/users/{id}(id=${staff.getId()})}">
         <table class="table">
             <thead>
             <tr>
