cleanup templates for orders package

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
         </strong>
     </p>
     <p sec:authorize="isAuthenticated()" th:text="#{general.current-time(${time})}">
-        Die aktuelle Zeit ist 2019-11-23.
+        The current date is 2019-11-23.
     </p>
 </div>
 
