--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,7 +31,7 @@
                 <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
                        data-toggle="dropdown" href="#" id="navbarDropdown" role="button" th:text="#{general.management}">
-                        Verwaltung
+                        Management
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                         <a class="dropdown-item" href="rooms.html" th:text="#{rooms}" th:href="@{/rooms}">Rooms</a>
