--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -13,7 +13,7 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-    <h1 th:text="#{orders}">Aufträge</h1>
+    <h1 th:text="#{orders}">Orders</h1>
 
     <table class="table">
         <thead>
@@ -21,17 +21,17 @@
             <th scope="col" th:text="#{general.id}">ID</th>
             <th scope="col" th:text="#{general.customer}">Customer</th>
             <th scope="col" th:text="#{orders.customer.item}">Customer Item</th>
-            <th scope="col" th:text="#{general.actions}">Aktionen</th>
+            <th scope="col" th:text="#{general.actions}">Actions</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="order : ${orders}">
             <td th:text="${order.getId()}">8adfdf53-0e11-499f-af36-efbc9db8a7f9</td>
             <td th:text="${order.getCustomer()}">Mark Zuckerberg</td>
-            <td th:text="${order.getItem()?.getName()}">Blauer Frack</td>
+            <td th:text="${order.getItem()?.getName()}">Blue Jacket</td>
             <td>
                 <a role="button" class="btn btn-info" href="orderdetail.html" th:href="@{/orders/detail/{id}(id=${order.getId()})}" th:text="#{general.details}">Details</a>
-                <a role="button" class="btn btn-primary" href="pickup.html" th:href="@{/orders/pickup/{id}(id=${order.getId()})}" th:if="${order.canPickUp()}" th:text="#{orders.pickup.return}">Zurückgeben</a>
+                <a role="button" class="btn btn-primary" href="pickup.html" th:href="@{/orders/pickup/{id}(id=${order.getId()})}" th:if="${order.canPickUp()}" th:text="#{orders.pickup.return}">Return</a>
             </td>
         </tr>
         </tbody>
