--- a/src/main/resources/templates/receiving.html
+++ b/src/main/resources/templates/receiving.html
@@ -25,11 +25,11 @@
         <h3 th:text="#{orders.order}">Order</h3>
         <div class="form-group">
             <label for="customer" th:text="#{orders.customer.name}">Customer's Name</label>
-            <input class="form-control" id="customer" placeholder="Name" required type="text" th:field="*{customer}">
+            <input class="form-control" id="customer" placeholder="Name" th:placeholder="#{general.name}" required type="text" th:field="*{customer}">
         </div>
         <div class="form-group">
             <label for="description" th:text="#{orders.description}">Description of the Item</label>
-            <input class="form-control" id="description" placeholder="Beschreibung" required type="text"
+            <input class="form-control" id="description" placeholder="Description" th:placeholder="#{general.description}" required type="text"
                    th:field="*{description}">
         </div>
 
