--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -13,16 +13,16 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-    <h1>Räume</h1>
+    <h1 th:text="#{rooms}">Räume</h1>
 
 
     <form method="post" th:object="${form}" th:action="@{/rooms/add}">
         <div class="form-group">
-            <label for="nameInput">Raumname</label>
-            <input th:field="*{name}" type="text" class="form-control" id="nameInput" placeholder="Raumname eingeben">
+            <label for="nameInput" th:text="#{rooms.names}">Raumname</label>
+            <input th:field="*{name}" type="text" class="form-control" id="nameInput" th:placeholder="#{rooms.names.enter}">
             <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert"></div>
         </div>
-        <button class="btn btn-warning" type="submit">Hinzufügen</button>
+        <button class="btn btn-warning" type="submit" th:text="#{rooms.add.submit}">Hinzufügen</button>
     </form>
     <br>
 
@@ -32,7 +32,7 @@
         <li class="list-group-item">
             <div class="btn-toolbar">
                 <form method="post" th:action="@{/rooms/{room}/delete(room=${room.id})}">
-                    <button class="btn btn-danger">Raum löschen</button>
+                    <button class="btn btn-danger" th:text="#{rooms.delete}">Raum löschen</button>
                 </form>
 
             </div>
@@ -40,13 +40,13 @@
     </ul>
 
     <br>
-    <h2>Belegplan (heute)</h2>
+    <h2 th:text="#{rooms.timetable}">Belegplan (heute)</h2>
 
     <div>
         <table class="table-striped table" th:action="@{/rooms}">
             <thead>
             <tr>
-                <th th:text="Zeiten"></th>
+                <th th:text="#{rooms.times}"></th>
                 <th th:text="${room.getName()}" th:each="room : ${rooms}">Raum</th>
             </tr>
             </thead>
