--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -15,7 +15,6 @@
 <div class="container mt-md-5">
     <h1>Räume</h1>
 
-
     <form method="post" th:object="${form}" th:action="@{/rooms/add}">
         <div class="form-group">
             <label for="nameInput">Raumname</label>
@@ -41,6 +40,8 @@
 
     <br>
     <h2>Belegplan</h2>
+    <h2 th:text="${#authorization.expression('isAuthenticated()')}">test</h2>
+
 
     <div>
         <table  class="table-striped table" th:action="@{/rooms}">
@@ -52,11 +53,14 @@
             <tbody>
             <tr th:each="row: ${slotTable}">
                 <td  th:each="field: ${row}">
+                   <!-- <span th:classappend="${#authentication.getUserAccount() == field.getOrder().getUserAccount()} ? class='p-3 mb-2 bg-primary text-white' : class='p-3 mb-2 bg-primary text-black' "></span> -->
                     <div class="p-3 mb-2 bg-primary text-white" th:if="${field}">
+
                         <span th:text="${field.getOrder().getId()}">efe3-2daee3-adede3</span>
                         <div>
                             <span class="font-weight-bold" th:text="${field.getStaff().getFirstName()}">Elon</span>
-                            <span c lass="font-weight-bold" th:text="${field.getStaff().getLastName()}">Musk</span>
+                            <span class="font-weight-bold" th:text="${field.getStaff().getLastName()}">Musk</span>
+                            <span class="font-weight-bold" th:text="${#authentication.getUserAccount()}">Musk</span>
                         </div>
                     </div>
                     <div th:unless="${field}">
