--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -6,8 +6,8 @@
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-
     <title th:text="#{materials}">Materialien</title>
+
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
@@ -15,11 +15,17 @@
 <div class="container mt-md-5">
     <h1 th:text="#{materials}">Materialien</h1>
 
-    <form action="material.html" class="input-group mb-3" method="post" th:action="@{material/consume}">
+    <form role="form" id="form" class="input-group mb-3" method="post" th:object="${form}" th:action="@{/material/consume}">
+        <div class="container mt-md-3">
+        <div class="alert alert-danger" role="alert" th:each="err : ${#fields.errors('*')}" th:text="${err}"></div>
+            <div class="alert alert-danger" th:if="${consumeError}" th:text="#{material.consume.error}"></div>
+            <div class="alert alert-danger" th:if="${restockError}" th:text="#{material.restock.error}"></div>
+        <br/>
+        </div>
         <div class="form-inline">
         <label>
-            <select class="form-control" name="materialId">
-                <option th:each="item : ${material}"
+            <select  class="form-control" name="materialId">
+                <option id="test" th:each="item : ${material}"
                         th:value="${item.getId()}"
                         th:text="${item.getProduct().getName()}">
                 </option>
@@ -28,12 +34,12 @@
         </div>
         <div class="form-inline">
         <label for="number"></label>
-        <input id="number" required type="number" name="number" min="1" max="10000" class="form-control">
+        <input id="number" required type="number" name="number" class="form-control">
+
         </div>
         <div class="form-inline">
-            <input class="btn btn-outline-primary" type="submit" name="restock_name"  th:value="#{materials.restock}"  th:formaction="@{material/restock}">
+            <input class="btn btn-outline-primary" type="submit" name="restock_name" th:value="#{materials.restock}" th:formaction="@{/material/restock}"/>
         </div>
-
         <div class="form-inline">
             <input class="btn btn-outline-secondary" type="submit" name="consume_name" th:value="#{materials.consume}" >
         </div>
@@ -50,7 +56,7 @@
         <tbody>
             <tr th:each="item : ${material}">
                 <td th:text="${item.product.name}"></td>
-                <td th:text="${{item.quantity}}"></td>
+                <td th:text="${{item.quantity.getAmount().intValueExact()}}+'/10000'+${item.getQuantity().getMetric().abbreviation}"></td>
         </tbody>
     </table>
 </form>
