--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,7 +22,7 @@
         <div class="form-group">
             <label for="firstName" th:text="#{users.registration.firstname}">First Name</label>
             <input class="form-control" id="firstName" name="firstName" th:field="*{firstName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="alert-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">
                 <p>The first name must not be empty.</p>
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="form-group">
             <label for="lastName" th:text="#{users.registration.lastname}">Last Name</label>
             <input class="form-control" id="lastName" name="lastName" th:field="*{lastName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="alert-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">
                 <p>The last name must not be empty.</p>
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
             <label for="userName" th:text="#{users.registration.username}">Username</label>
             <input class="form-control" id="userName" name="userName" th:field="*{userName}" th:errorclass="fieldError" type="text" required="required"/><br/>
-            <div class="alert-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
                 <p>The user name must not be empty.</p>
             </div>
         </div>
@@ -47,7 +47,7 @@
             <label th:text="#{general.password}" for="password">Password</label>
             <input class="form-control" id="password" name="password" th:field="*{password}" th:errorclass="fieldError" type="password"
                    required="required"/><br/>
-            <div class="alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                 <p>Password must not be blank.</p>
             </div>
         </div>
