--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,23 +7,23 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
-    <title th:text="#{users.management}">Nutzerverwaltung</title>
+    <title th:text="#{users.management}">User Management</title>
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-    <h1 th:text="#{users.management}">Nutzerverwaltung</h1>
+    <h1 th:text="#{users.management}">User Management</h1>
 
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">Nachname</th>
-            <th scope="col">Vorname</th>
-            <th scope="col">Nutzername</th>
-            <th scope="col">Gehalt/Monat in €</th>
-            <th scope="col">Fähigkeiten</th>
-            <th scope="col">Aktionen</th>
+            <th scope="col" th:text="#{users.overview.surname}">Surname</th>
+            <th scope="col" th:text="#{users.overview.forename}">Forename</th>
+            <th scope="col" th:text="#{users.overview.username}">Username</th>
+            <th scope="col" th:text="#{users.overview.salary}">Salary/Month in €</th>
+            <th scope="col" th:text="#{users.overview.skills}">Skills</th>
+            <th scope="col" th:text="#{users.overview.action}">Action</th>
         </tr>
         </thead>
         <tbody>
