--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <link th:href="@{/resources/room.css}" rel="stylesheet"
-          href="../static/resources/room.css" type="text/css"/>
+
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-    <title>Räume</title>
 
+    <title>Räume</title>
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
     <h1 th:text="#{rooms}">Räume</h1>
+
 
     <form method="post" th:object="${form}" th:action="@{/rooms/add}">
         <div class="form-group">
@@ -43,7 +43,7 @@
     <h2 th:text="#{rooms.timetable}">Belegplan (heute)</h2>
 
     <div>
-        <table  class="table-striped table" th:action="@{/rooms}">
+        <table class="table-striped table" th:action="@{/rooms}">
             <thead>
             <tr>
                 <th th:text="#{rooms.times}"></th>
@@ -51,13 +51,12 @@
             </tr>
             </thead>
             <tbody>
-
             <tr th:each="row, iter: ${slotTable}">
                 <td th:text="${times.get(iter.index).getFirst()} + ' - ' + ${times.get(iter.index).getSecond()}">vonbis</td>
-                <td class="marks-wrapper" th:each="field: ${row}">
-                    <div th:if="${field}">
+                <td th:each="field: ${row}">
+                    <div class="table-info" th:if="${field}">
                         <span th:text="${field.getOrder().getId()}">efe3-2daee3-adede3</span>
-                        <div class="marks" th:if ="${auth.equals(field.getStaff().getUserName())}"></div>
+                        <div class="mark" th:if ="${auth.equals(field.getStaff().getUserName())}"></div>
                             <div>
                                 <span class="font-weight-bold" th:text="${field.getStaff().getFirstName()}">Elon</span>
                                 <span class="font-weight-bold" th:text="${field.getStaff().getLastName()}">Musk</span>
