messages properties for finance

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -28,7 +28,7 @@
             <div class="alert alert-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
         </div>
 
-        <button type="submit" class="btn btn-primary" th:text="#{finance.additem.submit}">hinfügen</button>
+        <button type="submit" class="btn btn-primary" th:text="#{finance.addItem.submit}">hinfügen</button>
     </form>
 
 </div>
